1.21
----
* Add ActionPoint endpoint
* fixes Intervention serializers
* fixes formats popup menu


1.20
----
* fixes FundsReservationLoader
* fixes FAMIndicatorLoader month handling
* fixes HACTLoader
* enable ETLLog reset
* add ability

1.19
----
* add Partner endpoint
* add extra Location fields
* add TravelActivity endpoint


1.18
----
* fixes travel filtering
* disable live stats


1.16
----
* update to eTools 6.7
* improves Loader logic
* add Travel endpoint


1.15
----
* add ability to truncate DataMart tables
* fixes init-setup PeriodicTask creation


1.14
----
* Fix loading Intervention
* migrations reset


1.12
---------
* new endpoint DPIndicator
* preload helpers


1.11
---------
* add impersonation
* fixes schema permission check


1.10
----
* Loader refactoring
* new endpoint 'Funds Reservation'
* add budget informations to interventions


1.9 (dev)
---------
* WARNINGS: migration reset
* Location/GatewayType endpoints
* add action to queue multiple tasks
* updates schema to eTools v6.5.1


1.8
---
* WARNINGS: migration reset
* add ability to create 'per model' custom templates for html/pdf renderers
    new `TEMPLATE_CACHE_URL` enironment variable
* fixes error in some renderers with cached response
* Adopting of RabbitMQ to prevent message loss
* new admin index page
* Excel IQY support (beta)
* Allow endpoints to be consumend bny anonymous users
* Countries can be selected using name, schema_name,country_short_code or business_area_code
* Improved Browseable API
* `page_size` now accept `-1` to disable pagination


1.7
---
* WARNINGS: migration reset
* add YAML format
* new 'Monitor' page to check dataset last update date
* add ability to intercept changed/unchanged datamart records
* Azure storage support
* use versioning in API urls
* add email notifications on dataset changes
* add filter by 'last_modify_date'
* add 'updates/' endpoint to fetch only changes from last ETL
* add XHTML renderer
* add PDF renderer


1.6
---