@@ -1,0 +1,38 @@
+# Generated by Django 2.2 on 2019-04-05 09:20
+
+from django.db import migrations, models
+
+
+class Migration(migrations.Migration):
+
+    dependencies = [
+        ('data', '0008_auto_20190321_1015'),
+    ]
+
+    operations = [
+        migrations.AddField(
+            model_name='travelactivity',
+            name='result_code',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+        migrations.AddField(
+            model_name='travelactivity',
+            name='result_sector',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+        migrations.AddField(
+            model_name='travelactivity',
+            name='result_type',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+        migrations.AddField(
+            model_name='travelactivity',
+            name='result_vision_id',
+            field=models.CharField(blank=True, max_length=200, null=True),
+        ),
+        migrations.AddField(
+            model_name='travelactivity',
+            name='source_result_id',
+            field=models.IntegerField(null=True),
+        ),
+    ]
